--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #1f1f1f;
+  font-weight: 200 !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 .App {
   text-align: center;
+  font-weight: 200 !important;
+  margin-left: 0;
+  margin-right: 0;
 }
