--- a/src/Cell.css
+++ b/src/Cell.css
@@ -1,10 +1,42 @@
-.Cell {
-  height: 100px;
-  width: 100px;
-  background-color: darkgray;
-  cursor: pointer;
+@media (max-width: 375px) {
+  .Cell {
+    box-shadow: inset 0 0 .6em .12em #8039fb81;
+    padding: 1.6em;
+  }
+}
+
+@media all and (max-width: 750px) and (min-width: 375px) {
+  .Cell {
+    box-shadow: inset 0 0 .6em .12em #8039fb81;
+    padding: 2em;
+  }
+}
+
+@media (min-width: 750px) {
+  .Cell {
+    box-shadow: inset 0 0 1em .2em #8039fb81;
+    padding: 4em;
+  }
 }
 
 .Cell-lit {
-  background-color: white;
+  background-color: #DBB2FF;
+  transition: background 0.75s cubic-bezier(1, .46, 0, .31);
+  border: 1px solid #DBB2FF;
+}
+
+tr:nth-of-type(1) td:nth-of-type(1) {
+  border-top-left-radius: 12px;
+}
+
+tr:nth-of-type(1) td:last-of-type {
+  border-top-right-radius: 12px;
+}
+
+tr:last-of-type td:nth-of-type(1) {
+  border-bottom-left-radius: 12px;
+}
+
+tr:last-of-type td:last-of-type {
+  border-bottom-right-radius: 12px;
 }
